Apply API changes from new versions of webgl-wrapper and webgl-gui

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,19 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.32" }
+wasm-bindgen = "0.2.41"
 fnv = "1.0.6"
-console_error_panic_hook = "0.1.5"
+console_error_panic_hook = "0.1.6"
 log = "0.4.6"
 console_log = "0.1.2"
 rand = { version = "0.6.5", features = ["wasm-bindgen"] }
-cgmath = { git = "https://github.com/nstoddard/cgmath", features = ["serde"] }
+cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde"] }
 webgl-wrapper = { git = "https://github.com/nstoddard/webgl-wrapper" }
 webgl-gui = { git = "https://github.com/nstoddard/webgl-gui" }
 itertools = "0.8.0"
 
 [dependencies.web-sys]
-version = "0.3.9"
+version = "0.3.18"
 features = [
   "Window",
 ]
@@ -28,8 +28,7 @@ features = [
 opt-level = 2
 
 [profile.release]
-# TODO: re-enable when the bug in stdweb is fixed
-#lto = true
+lto = true
 opt-level = 3
 codegen-units = 1
 panic = "abort"
